# shinkai-side-executor/src/api/api_handlers.rs
@@ -21,6 +21,7 @@ const PART_KEY_ENCODED_VRPACK: &str = "encoded_vrpack";
 const PART_KEY_FOLDER_NAME: &str = "folder_name";
 const PART_KEY_MAX_NODE_TEXT_SIZE: &str = "max_node_text_size";
 const PART_KEY_NUM_OF_RESULTS: &str = "num_of_results";
+const PART_KEY_NUM_OF_VRKAIS_TO_SEARCH_INTO: &str = "num_of_vrkais_to_search_into";
 const PART_KEY_QUERY_STRING: &str = "query_string";
 const PART_KEY_VRPATH: &str = "vrpath";
 const PART_KEY_VRPACK_NAME: &str = "vrpack_name";
@@ -594,6 +595,95 @@ pub async fn vrpack_add_folder_handler(
         encoded_vrpack,
         warp::http::StatusCode::OK,
     )))
+}
+
+pub async fn vrpack_vector_search_handler(
+    form: warp::multipart::FormData,
+) -> Result<Box<dyn warp::Reply + Send>, warp::Rejection> {
+    let mut encoded_vrpack = "".to_string();
+    let mut generator = RemoteEmbeddingGenerator::new_default();
+    let mut num_of_results = 3u64;
+    let mut num_of_vrkais_to_search_into = 50u64;
+    let mut query_string = "".to_string();
+
+    let mut stream = Box::pin(form.filter_map(|part_result| async move {
+        if let Ok(part) = part_result {
+            println!("Received part: {:?}", part);
+
+            let part_name = part.name().to_string();
+
+            let stream = part
+                .stream()
+                .map(|res| res.map(|mut buf| buf.copy_to_bytes(buf.remaining()).to_vec()));
+
+            if [
+                PART_KEY_EMBEDDING_MODEL.to_string(),
+                PART_KEY_EMBEDDING_GEN_URL.to_string(),
+                PART_KEY_EMBEDDING_GEN_KEY.to_string(),
+                PART_KEY_ENCODED_VRPACK.to_string(),
+                PART_KEY_NUM_OF_RESULTS.to_string(),
+                PART_KEY_NUM_OF_VRKAIS_TO_SEARCH_INTO.to_string(),
+                PART_KEY_QUERY_STRING.to_string(),
+            ]
+            .contains(&part_name)
+            {
+                return Some((part_name, stream));
+            }
+        }
+        None
+    }));
+
+    while let Some((part_name, mut part_stream)) = stream.next().await {
+        println!("Processing part: {:?}", part_name);
+
+        let mut part_data = Vec::new();
+        while let Some(Ok(node)) = part_stream.next().await {
+            part_data.extend(node);
+        }
+
+        match part_name.as_str() {
+            PART_KEY_EMBEDDING_MODEL => {
+                let embedding_model = String::from_utf8(part_data).unwrap_or_default();
+                generator.model_type = EmbeddingModelType::from_string(&embedding_model)
+                    .map_err(|e| warp::reject::custom(APIError::from(e.to_string())))?;
+            }
+            PART_KEY_EMBEDDING_GEN_URL => generator.api_url = String::from_utf8(part_data).unwrap_or_default(),
+            PART_KEY_EMBEDDING_GEN_KEY => generator.api_key = Some(String::from_utf8(part_data).unwrap_or_default()),
+            PART_KEY_ENCODED_VRPACK => encoded_vrpack = String::from_utf8(part_data).unwrap_or_default(),
+            PART_KEY_NUM_OF_RESULTS => {
+                num_of_results = String::from_utf8(part_data)
+                    .unwrap_or_default()
+                    .parse::<u64>()
+                    .unwrap_or(3)
+            }
+            PART_KEY_NUM_OF_VRKAIS_TO_SEARCH_INTO => {
+                num_of_vrkais_to_search_into = String::from_utf8(part_data)
+                    .unwrap_or_default()
+                    .parse::<u64>()
+                    .unwrap_or(50)
+            }
+            PART_KEY_QUERY_STRING => query_string = String::from_utf8(part_data).unwrap_or_default(),
+            _ => {}
+        }
+    }
+
+    match VRPack::from_base64(&encoded_vrpack) {
+        Ok(vrpack) => {
+            let results = vrpack
+                .dynamic_deep_vector_search(query_string, num_of_vrkais_to_search_into, num_of_results, generator)
+                .await
+                .map_err(|e| warp::reject::custom(APIError::from(e.to_string())))?;
+
+            Ok(Box::new(warp::reply::with_status(
+                warp::reply::json(&results),
+                warp::http::StatusCode::OK,
+            )))
+        }
+        Err(_) => Ok(Box::new(warp::reply::with_status(
+            warp::reply::json(&"Input is not a valid VRPack."),
+            warp::http::StatusCode::BAD_REQUEST,
+        ))),
+    }
 }
 
 pub async fn vrpack_view_contents_handler(
